--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,17 @@
-.App{
+.App {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.logo {
+  height: 2rem;
+  width: 2rem;
+}
+
+.title {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
